# race_bot

./: LICENSE  README.md  db.sqlite  env_example  external-data.xml  pyproject.toml  race_bot.py  requirements.txt
modules/: constants.py  logger.py  sql_queries.py  utils.py
