[tool.poetry]
name = "race-bot"
version = "0.1.0"
description = ""
authors = ["David Saidov <delightxxls@gmail.com>"]
readme = "README.md"
packages = [{include = "race_bot"}]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.4"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
